k8s-yaml/zentao/zentao-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zentao
  namespace: zentao 
  labels:
    k8s-app: zentao
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: zentao
  template:
    metadata:
      labels:
        k8s-app: zentao
      annotations:
    spec:
      containers:
        - name: zentao-php
          image: juestnow/php-alpine:7.4.23
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
          - name: www
            mountPath: /www
          - name: php-fpm-volume
            mountPath: /var/run/svr/
          - name: www-etc-volume
            mountPath: /etc/php-fpm.d/www.conf
            subPath: www.conf
        - name: zentao-php-fpm-exporter
          image: juestnow/php-fpm_exporter:2.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9253
              name: php-metrics
              protocol: TCP
          resources:
            requests:
              memory: 30Mi
              cpu: 102m
            limits:
              memory: 50Mi
              cpu: 250m
          volumeMounts:
          - name: php-fpm-volume
            mountPath: /var/run/svr
        - name: zentao-nginx
          image: juestnow/nginx-alpine:1.21.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
            - containerPort: 8080
              name: http-metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz            
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 4096Mi
            limits:
              memory: 4096Mi
              cpu: 200m
          volumeMounts:
          - name: www
            mountPath: /www/
          - name: nginx-etc-volume
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
          - name: php-fpm-volume
            mountPath: /var/run/svr                    
      volumes:
        - name: www
          persistentVolumeClaim:
            claimName: zentao-pvc
        - name: nginx-etc-volume
          configMap:
            name: nginx-etc
            defaultMode: 0644
            items:
            - key: default.conf
              path: default.conf
        - name: www-etc-volume
          configMap:
            name: www-etc
            defaultMode: 0644
            items:
            - key: www.conf
              path: www.conf
        - name: php-fpm-volume
          emptyDir: 
            medium: Memory
