k8s-yaml/zentao/zentao-service.yaml
---
kind: Service
apiVersion: v1
metadata:   
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8080'
  labels:
    k8s-app: zentao
  name: zentao
  namespace: zentao
spec:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    k8s-app: zentao
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 8080
      name: http-metrics      
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9253'
    
  labels:
    k8s-app: zentao-metrics
  name: zentao-metrics
  namespace: zentao
spec:
  selector:
    k8s-app: zentao
  ports:
    - protocol: TCP
      port: 9253
      name: php-metrics
  type: ClusterIP
