k8s-yaml/zentao/zentao-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: zentao
  namespace: zentao
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.tycng.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: zentao
                port:
                  number: 80
